# public-repo-github-app-spike

./: README.md  pyproject.toml
.github/actions/setup-python-uv-env/: action.yml
.github/workflows/: ci.yml
src/basic_app/: __init__.py  greeter.py
tests/: test_greeter.py
