[project]
name = "basic-python-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.11.0",
  "pyright>=1.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 88
